--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.30.5)
-project(gcrisp)
 
-add_library(${PROJECT_NAME} STATIC src/core.c)
+add_library(gcrisp STATIC src/core.c)
 
 target_include_directories(${PROJECT_NAME} 
-  INTERFACE
+  PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
