--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,14 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 file(GLOB_RECURSE SRC_FILES src/*.cpp)
 add_library(${PROJECT_NAME} STATIC ${SRC_FILES})
 
+add_subdirectory(lib)
+
 target_include_directories(${PROJECT_NAME} 
   PUBLIC
   include
   PUBLIC
-  lib/SDL/include)
+  lib/SDL/include
+ )
 
 target_link_directories(${PROJECT_NAME}
   PRIVATE
@@ -19,9 +22,10 @@ target_link_directories(${PROJECT_NAME}
 
 target_link_libraries(${PROJECT_NAME}
   PUBLIC
-  SDL3::SDL3)
+  SDL3::SDL3
+  glad
+  glm)
 
-add_subdirectory(lib)
 
 
 
