--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(spdlog)
 add_subdirectory(glfw)
 add_subdirectory(GLAD)
 add_subdirectory(glm EXCLUDE_FROM_ALL)
+add_subdirectory(stb)
