--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/stb"]
 	path = lib/stb
 	url = https://github.com/nothings/stb.git
+[submodule "tools/GCEmbed/lib/stb"]
+	path = tools/GCEmbed/lib/stb
+	url = https://github.com/nothings/stb.git
