Fixed compatibility issue with linux and gcc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.30.5)
 
-project(gcrisp)
+project(gcrisp CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED On)
 
@@ -20,9 +20,8 @@ cmake_dependent_option(GCRISP_BUILD_WIN32 "Build support for Win32" ON "WIN32" O
 cmake_dependent_option(GCRISP_BUILD_POSIX "Build support for Posix/Linux" ON "UNIX;NOT APPLE" OFF)
 cmake_dependent_option(GCRISP_BUILD_ANDROID "Build support for Android" ON "ANDROID" OFF)
 
-file(GLOB_RECURSE SRC_FILES src/GCrisp/*.cpp src/GCrisp/*.h)
-
 add_library(${PROJECT_NAME} STATIC
+        src/GCrisp/Core/Core.h
         src/GCrisp/Assets/Assets.h
         src/GCrisp/Assets/AssetsManager.cpp
         src/GCrisp/Assets/AssetsManager.h
@@ -34,7 +33,6 @@ add_library(${PROJECT_NAME} STATIC
         src/GCrisp/Core/Input.h
         src/GCrisp/Core/Application.h
         src/GCrisp/Core/LayerStack.cpp
-        src/GCrisp/Core/Core.h
         src/GCrisp/Core/Layer.cpp
         src/GCrisp/Core/Entry.h
         src/GCrisp/Core/GWindow.h
@@ -75,69 +73,69 @@ add_library(${PROJECT_NAME} STATIC
         src/gcpch.h)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
-  target_compile_definitions(${PROJECT_NAME} PUBLIC GC_RELEASE)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC GC_RELEASE)
 elseif(CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
-  set(GCRISP_BUILD_DISTRIBUTABLE ON)
+    set(GCRISP_BUILD_DISTRIBUTABLE ON)
 endif()
 
 add_subdirectory(lib)
 
-target_include_directories(${PROJECT_NAME} 
+target_include_directories(${PROJECT_NAME}
   PUBLIC
   lib/glfw/include
   src
  )
 
 function(link_vulkan)
-  find_package(Vulkan ${GCRISP_VULKAN_VERSION} COMPONENTS glslc)
+    find_package(Vulkan ${GCRISP_VULKAN_VERSION} COMPONENTS glslc)
 
-  if(NOT ${Vulkan_FOUND})
-    include(FetchContent)
-    message(FATAL_ERROR "${PROJECT_NAME}: Vulkan SDK not found.
-    Please follow this guide https://vulkan-tutorial.com/Development_environment to setup the SDK based on your OS 
+    if(NOT ${Vulkan_FOUND})
+        include(FetchContent)
+        message(FATAL_ERROR "${PROJECT_NAME}: Vulkan SDK not found.
+    Please follow this guide https://vulkan-tutorial.com/Development_environment to setup the SDK based on your OS
     (Be sure to install glslc too)")
-  else()
-    target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIRS})
-    target_link_libraries(${PROJECT_NAME} PRIVATE ${Vulkan_LIBRARIES})
-  endif()
+    else()
+        target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIRS})
+        target_link_libraries(${PROJECT_NAME} PRIVATE ${Vulkan_LIBRARIES})
+    endif()
 endfunction()
 
 if(GCRISP_BUILD_WIN32 OR GCRISP_BUILD_POSIX)
-  link_vulkan()
+    link_vulkan()
 
-  add_definitions(-DGLFW_INCLUDE_NONE)
+    add_definitions(-DGLFW_INCLUDE_NONE)
 
-  file(GLOB_RECURSE COMMONS_SRC platform/Desktop/Commons/*.cpp)
-  target_sources(${PROJECT_NAME} PRIVATE ${COMMONS_SRC}) 
-  target_include_directories(${PROJECT_NAME} PRIVATE platform/Desktop/Commons)
-  target_compile_definitions(${PROJECT_NAME} PUBLIC GC_DESKTOP)
+    file(GLOB_RECURSE COMMONS_SRC platform/Desktop/Commons/*.cpp)
+    target_sources(${PROJECT_NAME} PRIVATE ${COMMONS_SRC})
+    target_include_directories(${PROJECT_NAME} PRIVATE platform/Desktop/Commons)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC GC_DESKTOP)
 
-   target_compile_definitions(${PROJECT_NAME} PUBLIC GC_VULKAN GC_OPENGL)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC GC_VULKAN GC_OPENGL)
 endif()
 
 if(GCRISP_BUILD_WIN32)
-  message(STATUS "${PROJECT_NAME}: Building for Windows systems")
+    message(STATUS "${PROJECT_NAME}: Building for Windows systems")
 
-  file(GLOB_RECURSE WIN32_SRC platform/Desktop/Win32/*.cpp)
+    file(GLOB_RECURSE WIN32_SRC platform/Desktop/Win32/*.cpp)
 
-  target_sources(${PROJECT_NAME} PRIVATE ${WIN32_SRC})
-  target_include_directories(${PROJECT_NAME} PRIVATE platform/Desktop/Win32)
+    target_sources(${PROJECT_NAME} PRIVATE ${WIN32_SRC})
+    target_include_directories(${PROJECT_NAME} PRIVATE platform/Desktop/Win32)
 
-  target_compile_definitions(${PROJECT_NAME} PUBLIC GC_WIN32 GC_DIRECTX)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC GC_WIN32 GC_DIRECTX)
 elseif(GCRISP_BUILD_POSIX)
-  message(STATUS "${PROJECT_NAME}: Building for Posix systems")
-  
-  set(CMAKE_CXX_FLAGS "-fdiagnostics-color=always")
+    message(STATUS "${PROJECT_NAME}: Building for Posix systems")
 
-  file(GLOB_RECURSE LINUX_SRC platform/Desktop/Linux/*.cpp)
+    set(CMAKE_CXX_FLAGS "-fdiagnostics-color=always")
 
-  target_sources(${PROJECT_NAME} PRIVATE ${LINUX_SRC})
-  target_include_directories(${PROJECT_NAME} PRIVATE platform/Desktop/Linux)
+    file(GLOB_RECURSE LINUX_SRC platform/Desktop/Linux/*.cpp)
 
-  target_compile_definitions(${PROJECT_NAME} PUBLIC GC_POSIX)
+    target_sources(${PROJECT_NAME} PRIVATE ${LINUX_SRC})
+    target_include_directories(${PROJECT_NAME} PRIVATE platform/Desktop/Linux)
+
+    target_compile_definitions(${PROJECT_NAME} PUBLIC GC_POSIX)
 elseif(GCRISP_BUILD_ANDROID)
-  message(FATAL_ERROR "${PROJECT_NAME}: Building for Android systems isn't supported yet!")
-  # Support still in progress
+    message(FATAL_ERROR "${PROJECT_NAME}: Building for Android systems isn't supported yet!")
+    # Support still in progress
 endif()
 
 
@@ -151,24 +149,24 @@ target_link_libraries(${PROJECT_NAME}
 )
 
 if(GCRISP_BUILD_DISTRIBUTABLE)
-  target_compile_definitions(${PROJECT_NAME} PUBLIC GC_DIST=1)
-  set(GCRISP_PROFILING OFF)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC GC_DIST=1)
+    set(GCRISP_PROFILING OFF)
 endif()
 
 if(GCRISP_PROFILING)
-  target_compile_definitions(${PROJECT_NAME} PUBLIC GC_PROFILING=1)
-  message(STATUS "Profiling enabled")
-else()
-  if(GCRISP_FORCE_PROFILING)
     target_compile_definitions(${PROJECT_NAME} PUBLIC GC_PROFILING=1)
-  endif()
-  target_compile_definitions(${PROJECT_NAME} PUBLIC GC_PROFILING=0)
-  message(STATUS "Profiling disabled")
+    message(STATUS "Profiling enabled")
+else()
+    if(GCRISP_FORCE_PROFILING)
+        target_compile_definitions(${PROJECT_NAME} PUBLIC GC_PROFILING=1)
+    endif()
+    target_compile_definitions(${PROJECT_NAME} PUBLIC GC_PROFILING=0)
+    message(STATUS "Profiling disabled")
 endif()
 
 target_precompile_headers(${PROJECT_NAME} PUBLIC src/gcpch.h)
 
 
 if(GCRISP_BUILD_TESTS)
-  add_subdirectory(test)
+    add_subdirectory(test)
 endif()
